--- a/eureka/eurekaclient/src/main/resources/application.yml
+++ b/eureka/eurekaclient/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8762
+  port: 8763
 spring:
   application:
     name: eurekaclient
@@ -7,4 +7,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defalutZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8762/eureka,http://localhost:8761/eureka
