--- a/eureka/eurekaserver/src/main/resources/application.yml
+++ b/eureka/eurekaserver/src/main/resources/application.yml
@@ -1,14 +1,17 @@
-server:
-  port: 8761
-spring:
-  application:
-    name: eurekaserver
+#server:
+#  port: 8761
+#spring:
+#  application:
+#    name: eurekaserver
 
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+#eureka:
+#  instance:
+#    hostname: localhost
+#  client:
+#    register-with-eureka: false
+#    fetch-registry: false
+#    serviceUrl:
+#      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+#  server:
+#    response-cache-update-interval-ms: 30
+#    enable-self-preservation: false
