--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <modules>
         <module>eureka</module>
+        <module>ribbon</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
