--- a/eureka/eurekaclient/src/main/resources/application.yml
+++ b/eureka/eurekaclient/src/main/resources/application.yml
@@ -1,10 +1,11 @@
-server:
-  port: 8763
-spring:
-  application:
-    name: eurekaclient
+#server:
+#  port: 8763
+#spring:
+#  application:
+#   name: eurekaclient
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8762/eureka,http://localhost:8761/eureka
+#eureka:
+#  client:
+#    serviceUrl:
+#      #defaultZone: http://localhost:8762/eureka,http://localhost:8761/eureka
+#      defaultZone: http://localhost:8761/eureka
