--- a/feign/src/main/resources/application.yml
+++ b/feign/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8765
-
-spring:
-  application:
-    name: ribbon
+  port: 8766
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+
+spring:
+  application:
+    name: feign
