--- a/ribbon/rest-template/pom.xml
+++ b/ribbon/rest-template/pom.xml
@@ -17,6 +17,12 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+
+        <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        <version>2.0.2.RELEASE</version>
+    </dependency>
     </dependencies>
 
     <build>
