--- a/hystrix/pom.xml
+++ b/hystrix/pom.xml
@@ -3,47 +3,41 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.6.RELEASE</version>
+        <groupId>com.nh</groupId>
+        <artifactId>springcloudsc</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
+    <modules>
+        <module>resttemplate-ribbon</module>
+    </modules>
     <groupId>com.nh</groupId>
-    <artifactId>springcloudsc</artifactId>
+    <artifactId>hystrix</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>springcloudsc</name>
+    <name>hystrix</name>
     <description>Demo project for Spring Boot</description>
-
-    <modules>
-        <module>eureka</module>
-        <module>ribbon</module>
-        <module>feign</module>
-        <module>hystrix</module>
-    </modules>
     <properties>
         <java.version>1.8</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring-cloud.version>Finchley.SR2</spring-cloud.version>
-        <spring-boot.version>2.0.6.RELEASE</spring-boot.version>
     </properties>
-
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>2.0.2.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <version>${spring-boot.version}</version>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-dependencies</artifactId>
-            <version>${spring-cloud.version}</version>
-            <type>pom</type>
-            <scope>import</scope>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.0.2.RELEASE</version>
         </dependency>
     </dependencies>
+
+
     <build>
         <plugins>
             <plugin>
@@ -52,4 +46,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
