--- a/hystrix/pom.xml
+++ b/hystrix/pom.xml
@@ -10,6 +10,8 @@
     </parent>
     <modules>
         <module>resttemplate-ribbon</module>
+        <module>feign-ribbon</module>
+        <module>turbin</module>
     </modules>
     <groupId>com.nh</groupId>
     <artifactId>hystrix</artifactId>
@@ -33,6 +35,15 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.0.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
             <version>2.0.2.RELEASE</version>
         </dependency>
     </dependencies>
