--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>ribbon</module>
         <module>feign</module>
         <module>hystrix</module>
+        <module>gateway</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
@@ -42,6 +43,16 @@
             <version>${spring-cloud.version}</version>
             <type>pom</type>
             <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.30</version>
         </dependency>
     </dependencies>
     <build>
