--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>nacos-spring-context</artifactId>
             <version>0.2.2-RC1</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+            <version>2.0.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
