--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
             <version>2.0.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+            <version>1.5.2</version>
+        </dependency>
     </dependencies>
 
     <build>
