--- a/eureka/eurekaclient/pom.xml
+++ b/eureka/eurekaclient/pom.xml
@@ -36,6 +36,11 @@
             <type>pom</type>
             <scope>import</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>2.0.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
