--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>sentinel-datasource-nacos</artifactId>
             <version>1.5.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>2.0.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
