--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>feign</module>
         <module>hystrix</module>
         <module>gateway</module>
+        <module>sleuth</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
