--- a/eureka/eurekaclient/pom.xml
+++ b/eureka/eurekaclient/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>spring-cloud-starter-zipkin</artifactId>
             <version>2.0.2.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>2.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
