--- a/eureka/eurekaclient/src/main/resources/bootstrap.yml
+++ b/eureka/eurekaclient/src/main/resources/bootstrap.yml
@@ -7,7 +7,10 @@ spring:
     nacos:
       discovery:
         server-addr: 49.235.114.120:8848   #注册到nacos注册中心
-
+  boot:
+    admin:
+      client:
+        url: http://localhost:8772
 
 management:
   endpoints:
