--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>hystrix</module>
         <module>gateway</module>
         <module>sleuth</module>
+        <module>admin</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
